Fix color picker not showing up

--- a/src/components/Popover.scss
+++ b/src/components/Popover.scss
@@ -1,7 +1,6 @@
 .excalidraw {
   .popover {
     position: absolute;
-    overflow: auto;
     z-index: 10;
   }
 }
